# green_cage_deformer

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindMaya.cmake
scripts/green_cage/: setup_cage.py
src/: green_cage_deformer.cc  green_cage_deformer.h
